--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
     <section id=how-it-work>
       <div class="container">
         <div class="row">
-          <div class="col-sm-7 ">
+          <div class="col-md-7 col-sm-8 col-xs-12">
+            <h2>Bond Back Guarantee</h2>
+            <p>Moving homes in Sydney is stressful enough. With our end of lease
+               cleaning service, getting your bond back has never been easier.
+               Rest assured knowing that your real estate agent or landlord will
+               accept your cleaning. If not, just notify us within 72 hours and
+               we'll gladly return to reclean any problem areas - free of charge.</p>
+          </div>
+          <div class="col-md-5 col-sm-4 col-xs">
 
           </div>
         </div>
